--- a/userChrome.css
+++ b/userChrome.css
@@ -27,6 +27,8 @@
   --mff-urlbar-results-url-color: #98c1d9;
   /*   --mff-tab-selected-bg: linear-gradient(90deg, rgba(232,74,95,1) 0%, rgba(255,132,124,1) 50%, rgba(254,206,168,1) 100%); */
   /*   --mff-urlbar-font-weight: 600; */
+  
+  /* It is mean't for HACKOCTOBER only ( Parth ) */
 
   /* Overriden Firefox variables*/
   --autocomplete-popup-background: var(--mff-bg) !important;
